--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
+  command = "npm run build"
+  publish = "dist"
   functions = "netlify/functions"
-  command = "npm run build" # Adjust based on your build command
-  publish = "build"         # Adjust based on your build output directory
 
 [[redirects]]
   from = "/.netlify/functions/*"
