--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "browser-image-compression": "^2.0.2",
     "cloudinary": "^2.5.1",
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
